# rendium

./: Cargo.toml  README.md
examples/: input.rs  shape.rs  shapes.rs  textures.rs  triangle.rs
src/: default.wgsl  input.rs  input_wrapper.rs  lib.rs  main.rs  shader.wgsl  shapes.rs  texture.rs  types.rs
test-game/: Cargo.toml
test-game/src/: main.rs
