[package]
name = "rendium"
version = "0.1.1"
edition = "2024"
authors = ["jan Piki"]
description = "A work in progress graphics library"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["wgpu", "graphics"]
categories = ["graphics", "game-development"]
include = ["src/default.wgsl"]

[dependencies]
anyhow = "1.0.98"
env_logger = "0.11.8"
pollster = "0.4.0"
wgpu = "26.0.1"
winit = "0.30.12"
bytemuck = {version = "1.16", features = ["derive"]}

[profile.dev]
debug = true
opt-level = 0

[workspace]
members = ["test-game"]
