[package]
name = "rendium"
version = "0.4.0"
edition = "2024"
authors = ["jan Piki"]
description = "A work in progress graphics library"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["wgpu", "graphics"]
categories = ["graphics", "game-development"]
repository = "https://github.com/janPiki/rendium.git"
include = [
  "src/**"
]

[dependencies]
anyhow = "1.0.98"
env_logger = "0.11.8"
pollster = "0.4.0"
wgpu = "26.0.1"
winit = "0.30.12"
bytemuck = {version = "1.16", features = ["derive"]}

[profile.dev]
incremental = false
debug = true
opt-level = 0

